--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.2",
     "good-storage": "^1.1.0",
     "vant": "^1.6.17",
     "vue": "^2.5.2",
