--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
     "good-storage": "^1.1.0",
-    "vant": "^1.6.17",
+    "vant": "^2.0.0-beta.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
