--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
+    "echarts": "^4.2.1",
     "good-storage": "^1.1.0",
     "vant": "^2.0.0-beta.2",
     "vue": "^2.5.2",
